--- a/source/layouts/_footer.html.erb
+++ b/source/layouts/_footer.html.erb
@@ -16,7 +16,7 @@
               <% link_to "https://facebook.com/#{admin.facebook_nickname}", target: "_blank" do %>
                 <i class="link-social fab fa-facebook" aria-hidden="true"></i>
               <% end %>
-              <% link_to "https://facebook.com/#{admin.instagram_nickname}", target: "_blank" do %>
+              <% link_to "https://instagram.com/#{admin.instagram_nickname}", target: "_blank" do %>
                 <i class="link-social fab fa-instagram"></i>
               <% end %>
             </div>
