--- a/source/stylesheets/config/_main.scss
+++ b/source/stylesheets/config/_main.scss
@@ -97,6 +97,17 @@ ul {
 
 
 /* Margins */
+// Top
+.mar-top-40 {
+  margin-top: 30px;
+}
+.mar-top-30 {
+  margin-top: 30px;
+}
+.mar-top-20 {
+  margin-top: 20px;
+}
+// Bottom
 .mar-bottom-40 {
   margin-bottom: 30px;
 }
