--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -84,6 +84,9 @@
   #contact-left-side {
     .contact-list {
       padding-left: 10px;
+      span {
+        font-weight: bold;
+      }
     }
   }
   #contact-right-side {
