Adds more links on navbar. Adds href and new class to links in navbar. Adds main.js file and function for smooth scroll

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -10,7 +10,7 @@
     <%= stylesheet_link_tag "application" %>
     <%= favicon_tag 'images/drones_del_caribe_logo_square.png' %>
   </head>
-  <body>
+  <body id="body">
     <%= partial 'layouts/navbar' %>
     <%= yield %>
     <%= partial 'layouts/footer' %>
