--- a/source/layouts/_navbar.html.erb
+++ b/source/layouts/_navbar.html.erb
@@ -7,18 +7,22 @@
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
 
-    <a href="" class="navbar-wagon-item navbar-wagon-link">Portada</a>
-    <a href="" class="navbar-wagon-item navbar-wagon-link">Quienes Somos</a>
-    <a href="" class="navbar-wagon-item navbar-wagon-link">Nuestros Servicios</a>
+    <a href="#body" class="navbar-wagon-item navbar-wagon-link smooth-link">Portada</a>
+    <a href="#about-us" class="navbar-wagon-item navbar-wagon-link smooth-link">Quienes Somos</a>
+    <a href="#services" class="navbar-wagon-item navbar-wagon-link smooth-link">Nuestros Servicios</a>
+    <a href="#projects" class="navbar-wagon-item navbar-wagon-link smooth-link">Proyectos</a>
+    <a href="#contact" class="navbar-wagon-item navbar-wagon-link smooth-link">Contacto</a>
   </div>
   <!-- Dropdown appearing on mobile only -->
   <div class="navbar-wagon-item hidden-md hidden-lg">
     <div class="dropdown">
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-        <li><a href="#">Portada</a></li>
-        <li><a href="#">Quienes Somos</a></li>
-        <li><a href="#">Nuestros Servicios</a></li>
+        <li><a href="#body" class="smooth-link">Portada</a></li>
+        <li><a href="#about-us" class="smooth-link">Quienes Somos</a></li>
+        <li><a href="#services" class="smooth-link">Nuestros Servicios</a></li>
+        <li><a href="#projects" class="smooth-link">Proyectos</a></li>
+        <li><a href="#contact" class="smooth-link">Contacto</a></li>
       </ul>
     </div>
   </div>
