--- a/source/layouts/_banner.html.erb
+++ b/source/layouts/_banner.html.erb
@@ -3,6 +3,6 @@
   <div class="banner-content">
     <h1>Drones Del Caribe</h1>
     <p>Servicios Profesionales</p>
-    <a class="btn btn-danger btn-lg">Explorar</a>
+    <a href="#services"class="btn btn-danger btn-lg smooth-link">Explorar</a>
   </div>
 </div>
