use image_url for services section instead of full path

--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -30,7 +30,7 @@
 
 
 #services {
-  background-image: url("/../images/servicios-drones-background.jpg");
+  background-image: image_url("servicios-drones-background.jpg");
   background-size: contain;
   background-position: -120px;
   background-repeat: no-repeat;
