Adds Mario's image. Adds new class for avatars. REplaces alt from Cartagena image. Replaces simple quote by double quotes on image_tags. Adds 'Colombia' to contact section

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -19,7 +19,7 @@ title: Drones Del Caribe
     <div class="row">
       <div class="col-xs-12 col-sm-12">
         <div class="member-container text-center">
-           <%= image_tag "https://via.placeholder.com/200x200.png?text=Mario", :class => "center-block avatar-x-large avatar-square mar-bottom-30" %>
+           <%= image_tag "Mario_Perez_piloto_dron.jpg", :class => "center-block avatar-xx-large avatar-square mar-bottom-30" %>
            <h3>Mario</h3>
            <p>Mario Pérez es un piloto de aeromodelismo y RPAS CON MÁS DE 20 años de experiencia, lo que permite mayor seguridad en el manejo de este tipo de aeronaves, además de utilizar Drones de última tecnología que permiten gravar videos 4K e imágenes con 20 megapixeles para poder brindar un exelente servicio.</p>
         </div>
@@ -116,10 +116,10 @@ title: Drones Del Caribe
 <!-- TODO dron images -->
 <div class="bckg-sand pad-y-100" id="drone-spec">
   <div class="image-container-top">
-    <%= image_tag '../images/drone_phantom-4-pro-transparent-bckg-400x234.png', :class => "card-image"%>
+    <%= image_tag "../images/drone_phantom-4-pro-transparent-bckg-400x234.png", :class => "card-image"%>
   </div>
   <div class="image-container-bottom">
-    <%= image_tag '../images/drone_phantom-4-pro-transparent-bckg-400x234.png', :class => "card-image"%>
+    <%= image_tag "../images/drone_phantom-4-pro-transparent-bckg-400x234.png", :class => "card-image"%>
   </div>
   <div class="container">
     <div class="row">
@@ -183,7 +183,7 @@ title: Drones Del Caribe
           </div>
 
           <div class="flex-item text-center mar-bottom-20">
-            <%= image_tag "fotografia_aerea_cartagena.jpg", class: "image-project", alt:"Levantamiento Topográfico con Dron" %>
+            <%= image_tag "fotografia_aerea_cartagena.jpg", class: "image-project", alt:"Fotografía aérea con Dron" %>
              <h4 class="text-center">Panorámica Cartagena</h4>
           </div>
 
@@ -243,7 +243,7 @@ title: Drones Del Caribe
           <% end %>
         </div>
         <div>
-          <p class="mar-top-30">Nos encontramos en el departamento de Sucre, pero nos podemos desplazar a cualquier departamento de la costa Atlántica e incluso del interior del país, en función del proyecto a realizar.</p>
+          <p class="mar-top-30">Nos encontramos en el departamento de Sucre (<strong>Colombia</strong>), pero nos podemos desplazar a cualquier departamento de la costa Atlántica e incluso del interior del país, en función del proyecto a realizar.</p>
         </div>
       </div>
 
