--- a/source/stylesheets/components/_avatar.scss
+++ b/source/stylesheets/components/_avatar.scss
@@ -10,6 +10,10 @@
   width: 200px;
   border-radius: 50%;
 }
+.avatar-xx-large {
+  width: 300px;
+  border-radius: 50%;
+}
 .avatar-bordered {
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
